gap caused by slideshow fixed

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -3,6 +3,7 @@
 }
 body{
   padding-top: 0;
+  height: 100%;
 }
 /*.sth{
   background-image: url("valley_aboutus.jpg");
